* v1.1
 - Move/Copy operations without os.system
 - Reloading logs bug fixed